# databricks-docs-rag-pipeline

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: api.md  guide.md  integrations.md
docs/superpowers/plans/: 2026-04-22-databricks-rag-pipeline.md  2026-04-25-llm-integration-fix.md  2026-04-25-modular-rag-pipeline-implementation.md  2026-04-25-rag-tool-mcp-integration.md
docs/superpowers/specs/: 2026-04-25-llm-integration-fix-design.md
scripts/: scrape_databricks_docs.py  setup_sample_data.py
src/: __init__.py  chunking.py  config.py  embed.py  ingest.py  llm.py  models.py  pipeline.py  repl.py  reranker.py  retrieval.py  vectorstore.py
src/databricks_docs_rag_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rag_pipeline/: __init__.py  __version__.py  config.py
src/rag_pipeline/core/: __init__.py  chunking.py  embed.py  ingest.py  models.py  vectorstore.py
src/rag_pipeline/integrations/: __init__.py  cli.py  lambda_handler.py  langchain.py  rest_api.py  tool.py
src/rag_pipeline/llm/: __init__.py  _base.py  _factory.py  anthropic.py  bedrock.py  ollama.py  openai.py
src/rag_pipeline/pipeline/: __init__.py  keyword_detector.py  rag.py
tests/: conftest.py  test_chunking.py  test_config.py  test_core.py  test_embed.py  test_ingest.py  test_integrations.py  test_llm.py  test_pipeline.py  test_retrieval.py  test_vectorstore.py
